fix: nomes de variáveis e design

--- a/LabProject/src/telas/telaAgendarExame.form
+++ b/LabProject/src/telas/telaAgendarExame.form
@@ -212,7 +212,7 @@
             </Constraint>
           </Constraints>
         </Component>
-        <Component class="javax.swing.JLabel" name="lblPreco1">
+        <Component class="javax.swing.JLabel" name="lblPreco">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="21" style="1"/>
