--- a/LabProject/src/telas/templateLaudo.form
+++ b/LabProject/src/telas/templateLaudo.form
@@ -49,7 +49,7 @@
                       <Component id="txtNome" min="-2" pref="445" max="-2" attributes="0"/>
                   </Group>
                   <Component id="txtNomeExame" max="32767" attributes="0"/>
-                  <Component id="jScrollPane1" alignment="1" max="32767" attributes="0"/>
+                  <Component id="scrollPaneResultado" alignment="1" max="32767" attributes="0"/>
               </Group>
               <EmptySpace pref="19" max="32767" attributes="0"/>
           </Group>
@@ -84,8 +84,8 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="txtNomeExame" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="jScrollPane1" min="-2" pref="455" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="98" max="-2" attributes="0"/>
+              <Component id="scrollPaneResultado" min="-2" pref="535" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="pnlBordaInferior" max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -213,7 +213,7 @@
         </Property>
       </Properties>
     </Component>
-    <Container class="javax.swing.JScrollPane" name="jScrollPane1">
+    <Container class="javax.swing.JScrollPane" name="scrollPaneResultado">
       <AuxValues>
         <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
       </AuxValues>
