fix: debugs e botões

--- a/LabProject/src/telas/telaPagamento.form
+++ b/LabProject/src/telas/telaPagamento.form
@@ -218,20 +218,23 @@
                               <Component id="lblVencimento1" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="txtDataVencimento" min="-2" pref="136" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" alignment="1" attributes="0">
+                              <Group type="102" attributes="0">
+                                  <EmptySpace max="32767" attributes="0"/>
                                   <Component id="lblIconCard" min="-2" pref="236" max="-2" attributes="0"/>
                                   <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
                               </Group>
-                              <Group type="102" alignment="1" attributes="0">
+                              <Group type="102" alignment="0" attributes="0">
+                                  <EmptySpace min="-2" pref="61" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="txtCpf" min="-2" pref="136" max="-2" attributes="0"/>
                                       <Component id="lblCVV" min="-2" max="-2" attributes="0"/>
-                                      <Component id="txtCvv" min="-2" pref="102" max="-2" attributes="0"/>
-                                      <Component id="lblCpf" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                          <Component id="txtCpf" pref="200" max="32767" attributes="0"/>
+                                          <Component id="lblCpf" min="-2" max="-2" attributes="0"/>
+                                          <Component id="txtCvv" alignment="0" max="32767" attributes="0"/>
+                                      </Group>
                                   </Group>
-                                  <EmptySpace min="-2" pref="58" max="-2" attributes="0"/>
+                                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -279,7 +282,7 @@
                                   <Component id="lblIconCard" min="-2" pref="128" max="-2" attributes="0"/>
                               </Group>
                           </Group>
-                          <EmptySpace pref="62" max="32767" attributes="0"/>
+                          <EmptySpace pref="66" max="32767" attributes="0"/>
                           <Component id="separatorCartao" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                       </Group>
