--- a/LabProject/src/telas/templateLaudo.form
+++ b/LabProject/src/telas/templateLaudo.form
@@ -95,7 +95,7 @@
     <Container class="javax.swing.JPanel" name="pnlTitle">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="be" green="c5" red="f8" type="rgb"/>
+          <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
       </Properties>
 
@@ -241,7 +241,7 @@
     <Container class="javax.swing.JPanel" name="pnlBordaInferior">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="be" green="c5" red="f8" type="rgb"/>
+          <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
       </Properties>
 
